2018-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLayoutManager.m
	(-glyphRangeForCharacterRange:actualCharacterRange:): Try to
	handle attachments at the end of the file more graceful.

2018-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_rebuildCoordinates): Use simple path only
	when both window and superview are nil. Set the visibleRect in
	this case to bounds.

2018-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-targetForAction:to:from:): Return nil
	if the target is non-nil but does not respond to the action.

2018-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m,
	* Printing/GSCUPS/GSCUPSPrintInfo.m:
	Restore -allocWithZone: methods as this is needed to override
	behaviour in superclass.

2018-01-01  Yavor Doganov <yavor@gnu.org>

	* Documentation/make_services.1: Typo fix.

2018-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* config/pkg.m4: Update to serial 12.
	* Headers/Additions/GNUstepGUI/config.h.in,
	* configure: Regnerate
	Fixes bug #52779.
	Patch by Yavor Doganov <yavor@gnu.org>

2017-12-31 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi
	* Documentation/news.texi
	* Documentation/ReleaseNotes.gsdoc
	* ANNOUNCE
	* NEWS
	* Version: Cut a new release of gnustep-gui which requires
	gnustep-base 1.25.1.

2017-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSBezierPath/windingCountAtPoint.m
	* Tests/gui/NSCell/basic.m
	* Tests/gui/NSEvent/delta.m
	* Tests/gui/NSPasteboard/lazy_copy.m
	* Tests/gui/NSSavePanel/setDelegate_reload.m
	* Tests/gui/NSSliderCell/minMax.m
	Remove comipler warnings in test code.
	* Tests/gui/TextSystem/deallocation.m
	Move auto release pool inside of the test set to get the test
	working again.

2017-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m,
	* Printing/GSCUPS/GSCUPSPrintInfo.m,
	* Printing/GSCUPS/GSCUPSPrintOperation.m: Undefine __BLOCKS__
	before the cups.h import as some versions of this header file